# cly

./: .buildinfo  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .prospector.yaml  LICENSE  PALESTRA.md  README.md  README_PT.md  batcomputer.py  changelog.html  example.html  genindex.html  index.html  install_cly.py  objects.inv  palestra.py  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  script.py  search.html  searchindex.js  sonar-project.properties
.doctrees/: changelog.doctree  environment.pickle  example.doctree  index.doctree
.doctrees/modules/: cli.doctree  cly.doctree  modules.doctree
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: generic-issue-template---modelo-de-problema-gen-rico.md  generic-issue-template.md
.github/workflows/: cd.yml  changelog_template.jinja2  ci.yml  versioning.yml
_sources/: changelog.rst.txt
_sources/modules/: cli.rst.txt  cly.rst.txt  modules.rst.txt
cli/: __init__.py  colors.py  config.py  config.pyi  docstring.py  utils.py  utils.pyi
cly/: __init__.py  config.py  testing.py  utils.py
docker/: Dockerfile  base.sh  docker-compose.yaml  docker-compose.yml  down.sh  env.sh  exec.sh  run.sh  scan.sh
docs/: README_PT.md  changelog.rst  conf.py  contributing.rst  example.rst  generate_diagrams.py  index.rst
example/: batcomputer_cli.py  command1.py  database.py  example_cli.py
example/commands/: __init__.py  identify.py  list_aliases.py
modules/: cli.html  cly.html  modules.html
requirements/: dev.txt
script_name/: __main__.py  command1.py  command2.py  config.py  utils.py
scripts/: __init__.py  __main__.py  cli.py  command1.py  config.py  example.py  run_example.py  utils.py  versioning.py
scripts/cli/: __init__.py  colors.py  config.py  config.pyi  utils.py  utils.pyi
scripts/example/: __init__.py  command1.py  command1.pyi  example_cli.py  example_cli.pyi  main.py
tests/: __init__.py  batcomputer.py  test_command1.py  test_config.py  test_main.py  test_utils.py  test_version.py
tests/batcomputer_cli/: __init__.py  __main__.py  database.py
tests/batcomputer_cli/commands/: identify.py  list_aliases.py
tests/integration/: __init__.py  test_batcomputer.py  test_cli_without_commands.py  test_example.py  test_run_example.py
tests/integration/cli/: __init__.py  test_colors.py  test_config.py  test_docstring.py  test_utils.py
tests/integration/cly/: test_colors.py  test_config.py  test_docstring.py  test_testing.py  test_utils.py
tests/unit/: __init__.py
tests/unit/batcomputer_cli/commands/: test_identify.py
tests/unit/cli/: __init__.py  test_colors.py  test_config.py  test_docstring.py  test_utils.py
tests/unit/cly/: test_colors.py  test_config.py  test_docstring.py  test_utils.py
tests/unit/example/: __init__.py  test_command1.py  test_example_cli.py  test_main.py
tests/unit/example/commands/: test_identify.py
