[tool.poetry]
name = "python-cli-script-template"
version = "0.1.0"
description = "Template to create Python CLI scripts"
authors = ["Mateus Oliveira"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
isort = "^5.10.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
safety = "^1.10.3"
editorconfig-checker = "^2.4.0"
black = "^22.3.0"
prospector = "^1.7.7"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = "error"
addopts = [
    "-vv",
    "-s",
    "--cov-report=term-missing",
    "--cov-report=html:tests/coverage-results/htmlcov",
    "--cov-report=xml:tests/coverage-results/coverage.xml",
    "--cov=scripts",
    "--cov-fail-under=100",
]

[tool.mypy]
python_version = "3.7"
strict = true
show_error_codes = true

[tool.isort]
profile = "black"
line_length = 79
verbose = true
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true

[tool.black]
line-length = 79
verbose = true
