[tool.poetry]
name = "cly"
version = "1.1.2"
description = "CLY?! Template to create Python CLI scripts"
authors = ["Mateus Oliveira"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.3.0"
editorconfig-checker = "^2.4.0"
gitlint = "^0.17.0"
isort = "^5.10.1"
mypy = "^0.971"
pre-commit = "^2.19.0"
prospector = "^1.7.7"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
safety = "^2.1.1"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
toml = "^0.10.2"
types-toml = "^0.10.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = "error"
addopts = [
    "-vv",
    "-s",
    "--cov-report=term-missing",
    "--cov-report=html:tests/coverage-results/htmlcov",
    "--cov-report=xml:tests/coverage-results/coverage.xml",
    "--cov=cly",
    "--cov-fail-under=100",
]

[tool.mypy]
python_version = "3.7"
strict = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "batcomputer_cli.__main__",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 79
verbose = true
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true

[tool.black]
line-length = 79
verbose = true
